@@ -66,6 +66,8 @@ AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],"$GETTEXT_PACKAGE", [The gettext package])
 
 AM_GLIB_GNU_GETTEXT
 
+AC_PROG_INTLTOOL
+	
 dnl ==========================================================================
 dnl Check for SELinux
     
