@@ -1,5 +1,15 @@
 2005-01-10  Alexander Larsson  <alexl@redhat.com>
 
+	* Makefile.am:
+	* configure.in:
+	* po/POTFILES.in:
+	Translate schemas file too.
+
+	* po/Makefile.in.in:
+	Remove
+
+2005-01-10  Alexander Larsson  <alexl@redhat.com>
+
 	* .cvsignore:
 	* configure.in:
 	* po/.cvsignore:
